Prevent nav line to jump back when moving between menu items

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -192,31 +192,31 @@ nav {
     }
 
     li {
-      margin: 20px;
+      padding: 20px;
       list-style: none;
       font-size: 2rem;
 
       @include on-event {
         &:nth-child(1) ~ .line {
-          left: 0;
+          left: 20px;
         }
         &:nth-child(2) ~ .line {
-          left: 180px;
+          left: 200px;
         }
         &:nth-child(3) ~ .line {
-          left: 370px;
+          left: 390px;
         }
       }
 
       &.active {
         &:nth-child(1) ~ .line {
-          left: 0;
+          left: 20px;
         }
         &:nth-child(2) ~ .line {
-          left: 180px;
+          left: 200px;
         }
         &:nth-child(3) ~ .line {
-          left: 370px;
+          left: 390px;
         }
 
         a {
@@ -239,10 +239,11 @@ nav {
     }
 
     .line {
+      padding: 0;
       opacity: 0;
       position: absolute;
       left: -157px;
-      bottom: -10px;
+      bottom: 10px;
       transition: 0.4s ease-out;
       width: 110px;
       height: 6px;
